--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="main_title">Antons\nSkafferi</string>
     <string name="button_servitor">Servitörsläge</string>
     <string name="button_kok">Köksläge</string>
+    <string name="name">NAMN</string>
 </resources>
