Modified class "LogInActivity". Added "edit_Text_background.xml" to modify editText-elements. Also added documentation on how to use "SwitchActivity".

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,9 @@
     <string name="main_title">Antons\nSkafferi</string>
     <string name="button_servitor">Servitörsläge</string>
     <string name="button_kok">Köksläge</string>
-    <string name="name">NAMN</string>
+    <string name="log_in_name">NAMN</string>
+    <string name="log_in_losenord">LÖSENORD</string>
+    <string name="log_in_username">Username</string>
+    <string name="log_in_password">********</string>
+    <string name="log_in">LOGGA IN</string>
 </resources>
