Changed layout from "RelativeLayout" to "ConstraintLayout" in activity_log_in.xml. Also added "dimensions.xml" for activity_log_in.xml.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="table_5">Bord 5</string>
     <string name="table_6">Bord 6</string>
     <string name="table_7">Bord 7</string>
-
+<!-- Log in -->
     <string name="log_in_name">NAMN</string>
     <string name="log_in_losenord">LÖSENORD</string>
     <string name="log_in_username">Username</string>
