Fixed main view to have correct dimensions. Added back-button to "log_in" activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,8 @@
     <string name="createBookingButton_id">SKAPA BOKNING</string>
     <string name="dropInButton_id">DROP IN</string>
     <string name="exitButton_id">AVBRYT</string>
-<!-- Tables -->
+    <string name="back">BACK</string>
+    <!-- Tables -->
     <string name="table_1">Bord 1</string>
     <string name="table_2">Bord 2</string>
     <string name="table_3">Bord 3</string>
@@ -18,10 +19,17 @@
     <string name="table_5">Bord 5</string>
     <string name="table_6">Bord 6</string>
     <string name="table_7">Bord 7</string>
-<!-- Log in -->
+    <!-- Log in -->
     <string name="log_in_name">NAMN</string>
     <string name="log_in_losenord">LÖSENORD</string>
     <string name="log_in_username">Username</string>
     <string name="log_in_password">********</string>
     <string name="log_in">LOGGA IN</string>
+
+    <string-array name="planets_array">
+        <item>Mercury</item>
+        <item>Venus</item>
+        <item>Earth</item>
+        <item>Mars</item>
+    </string-array>
 </resources>
