--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,11 +25,28 @@
     <string name="log_in_username">Username</string>
     <string name="log_in_password">********</string>
     <string name="log_in">LOGGA IN</string>
+    <!-- ORDER -->
+    <string name="menu">MENU</string>
+        <!-- ROW 1, POS 1-3 -->
+        <string name="menu_r1p1">TEMP_ROW1</string>
+        <string name="menu_r1p2">TEMP_ROW1</string>
+        <string name="menu_r1p3">TEMP_ROW1</string>
+        <!-- ROW 2, POS 1-3 -->
+        <string name="menu_r2p1">TEMP_ROW2</string>
+        <string name="menu_r2p2">TEMP_ROW2</string>
+        <string name="menu_r2p3">TEMP_ROW2</string>
+        <!-- ROW 3, POS 1-3 -->
+        <string name="menu_r3p1">TEMP_ROW3</string>
+        <string name="menu_r3p2">TEMP_ROW3</string>
+        <string name="menu_r3p3">TEMP_ROW3</string>
+        <!-- ROW 4, POS 1-3 -->
+        <string name="menu_r4p1">TEMP_ROW4</string>
+        <string name="menu_r4p2">TEMP_ROW4</string>
+        <string name="menu_r4p3">TEMP_ROW4</string>
+        <!-- ROW 5, POS 1-3 -->
+        <string name="menu_r5p1">TEMP_ROW5</string>
+        <string name="menu_r5p2">TEMP_ROW5</string>
+        <string name="menu_r5p3">TEMP_ROW5</string>
 
-    <string-array name="planets_array">
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-    </string-array>
+
 </resources>
