--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,13 @@
     <string name="log_in">LOGGA IN</string>
     <!-- ORDER -->
     <string name="menu">MENU</string>
+    <string-array name="ratter">
+        <item>Vanliga rätter</item>
+        <item>Förätter</item>
+        <item>Varmrätter</item>
+        <item>Efterrätter</item>
+        <item>Dryck</item>
+    </string-array>
         <!-- ROW 1, POS 1-3 -->
         <string name="menu_r1p1">TEMP_ROW1</string>
         <string name="menu_r1p2">TEMP_ROW1</string>
