Added calendar popup picker to form in booking

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <!-- Booking -->
     <string name="booking_current_table">temp</string>
     <string name="error">temp</string>
-    <string name="errorMessage">Fyll i alla fält</string>
+    <string name="errorMessage">Fyll i alla fälts</string>
     <string name="table">Bord </string>
     <!-- Tables -->
     <string name="table_1">Bord 1</string>
