--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
         <item>Beställning</item>
     </string-array>
     <string name="send_order">Skicka beställning</string>
+    <string name="order">Beställning</string>
 </resources>
