Added functionality to add custom notes to orders by holding the button when ordering. A pop-up window will appear to fill the notes.
Cleaned up the code by making some declarations local.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,7 @@
     </string-array>
     <string name="send_order">Skicka beställning</string>
     <string name="order">Beställning</string>
+    <!-- POP UP -->
+    <string name="pop_up_hint">Ange notering...</string>
+    <string name="pop_up_ok_button">Lägg till notering!</string>
 </resources>
