- TablesActivity now shows bookings from DB. - LogInActivity now properly sends Employee to all other views. - Added page "Summary" for summary of orders, only created back button. - Fixed a problems with orders where a whitespace was created when the carte had long text. - LogInActivity now uses information from DB.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,10 +37,11 @@
         <item>Efterrätter</item>
         <item>Dryck</item>
         <item>Beställning</item>
+        <item>Sammanställning</item>
     </string-array>
     <string name="send_order">Skicka beställning</string>
     <string name="order">Beställning</string>
     <!-- POP UP -->
-    <string name="pop_up_hint">Ange notering...</string>
+    <string name="pop_up_hint">Ange notering…</string>
     <string name="pop_up_ok_button">Lägg till notering!</string>
 </resources>
