Styled the form and added message when all fields are not filled in when youre supposed to.
You can now create a booking on a date where there is no booking (stupid error).

Started on the notification from kitchen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,9 @@
     <string name="main_title">Antons\nSkafferi</string>
     <string name="button_servitor">Servitörsläge</string>
     <string name="button_kok">Köksläge</string>
-    <string name="nameHint">Anton</string>
-    <string name="amountHint">5</string>
-    <string name="timeHint">Datum</string>
-    <string name="phoneHint">070 123 123 12 12</string>
+    <string name="nameHint">"Anton"</string>
+    <string name="amountHint">"5"</string>
+    <string name="phoneHint">"070 123 123 12 12"</string>
     <string name="name">NAMN</string>
     <string name="amount">ANTAL</string>
     <string name="datetime">DATUM OCH TID</string>
