Created popup that display the info about a booking.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,9 @@
     </string-array>
     <string name="send_order">Skicka beställning</string>
     <string name="order">Beställning</string>
-    <!-- POP UP -->
+    <!-- POPUP add note to order -->
     <string name="pop_up_hint">Ange notering…</string>
     <string name="pop_up_ok_button">Lägg till notering!</string>
+    <!-- POPUP booking info -->
+    <string name="popup_button_back">OK</string>
 </resources>
