--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,11 @@
     <string name="button_servitor">Servitörsläge</string>
     <string name="button_kok">Köksläge</string>
     <string name="nameHint">"Anton"</string>
+    <string name="nameLHint">"Skafferi"</string>
     <string name="amountHint">"5"</string>
     <string name="phoneHint">"070 123 123 12 12"</string>
-    <string name="name">NAMN</string>
+    <string name="nameF">FÖRNAMN</string>
+    <string name="nameL">EFTERNAMN</string>
     <string name="amount">ANTAL</string>
     <string name="datetime">DATUM OCH TID</string>
     <string name="notes">NOTERING</string>
