--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,7 @@
     <string name="pop_up_ok_button">Lägg till notering!</string>
     <!-- POPUP booking info -->
     <string name="popup_button_back">OK</string>
+    <!-- Notification-->
+    <string name="channel_name">channelName</string>
+    <string name="channel_description">channelDescription</string>
 </resources>
