- Fixed a bug where you were unable to send orders and bookings when the clock was between hour 0 - 10, minute 0 - 10, and second 0 - 10. The previous version would for example send "21:8" instead of "21:08", causing the DB to return an error. This is now solved. - Updated the hint for phone-numbers so the number is correct.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="nameHint">"Anton"</string>
     <string name="nameLHint">"Skafferi"</string>
     <string name="amountHint">"5"</string>
-    <string name="phoneHint">"070 123 123 12 12"</string>
+    <string name="phoneHint">"070 12 89 103"</string>
     <string name="nameF">FÖRNAMN</string>
     <string name="nameL">EFTERNAMN</string>
     <string name="amount">ANTAL</string>
